Added no jobs section

--- a/index.html
+++ b/index.html
@@ -64,10 +64,26 @@
             <section id="filtered-section" class="hidden">
 
             </section>
+            <section id="no-jobs" class="hidden">
+                <div class="hero bg-base-100 min-h-screen">
+                     <div class="hero-content text-center">
+                        <div class="max-w-md">
+                         <img class="mx-auto" src="images/nojobscard.png" alt="">   
+                        <h3 class="text-2xl font-bold text-center text-[#002c5cFF]">No jobs available</h3>
+                         <p class="py-2 text-gray-500">
+                            Check back soon for new job opportunities
+                        </p>
+    </div>
+  </div>
+</div>
+            </section>
             <section id="jobs-card" class="space-y-5">
                     <div class="card card-border bg-base-100">
                         <div class="card-body">
-                            <h2 class="heading card-title text-[#002c5cFF] font-bold">Mobile First Corp</h2>
+                            <div class="flex justify-between">
+                                <h2 class="heading card-title text-[#002c5cFF] font-bold">Mobile First Corp</h2>
+                                <i class="fa-regular fa-trash-can"></i>
+                            </div>
                             <p class="sub-heading text-gray-500 font-normal text-base">React Native Developer</p>
                             <p class="price text-gray-500 font-normal text-sm"> Remote • Full-time • $130,000 - $175,000</p>
                          <div class="application-btn card-actions justify-start">
@@ -82,7 +98,10 @@
                     </div>
                     <div class="card card-border bg-base-100">
                         <div class="card-body">
-                            <h2 class="heading card-title text-[#002c5cFF] font-bold">WebFlow Agency</h2>
+                            <div class="flex justify-between">
+                                <h2 class="heading card-title text-[#002c5cFF] font-bold">WebFlow Agency</h2>
+                                <i class="fa-regular fa-trash-can"></i>
+                            </div>
                             <p class="sub-heading text-gray-500 font-normal text-base">Web Designer & Developer</p>
                             <p class="price text-gray-500 font-normal text-sm"> Los Angeles, CA
  • 
@@ -101,7 +120,10 @@ Part-time
                     </div>
                     <div class="card card-border bg-base-100">
                         <div class="card-body">
-                            <h2 class="heading card-title text-[#002c5cFF] font-bold">DataViz Solutions</h2>
+                            <div class="flex justify-between">
+                                <h2 class="heading card-title text-[#002c5cFF] font-bold">DataViz Solutions</h2>
+                                <i class="fa-regular fa-trash-can"></i>
+                            </div>
                             <p class="sub-heading text-gray-500 font-normal text-base">Data Visualization Specialist</p>
                             <p class="price text-gray-500 font-normal text-sm"> Boston, MA 
 •
@@ -120,7 +142,10 @@ Part-time
                     </div>
                     <div class="card card-border bg-base-100">
                         <div class="card-body">
-                            <h2 class="heading card-title text-[#002c5cFF] font-bold">CloudFirst Inc</h2>
+                            <div class="flex justify-between">
+                                <h2 class="heading card-title text-[#002c5cFF] font-bold">CloudFirst Inc</h2>
+                                <i class="fa-regular fa-trash-can"></i>
+                            </div>
                             <p class="sub-heading text-gray-500 font-normal text-base">Backend Developer</p>
                             <p class="price text-gray-500 font-normal text-sm"> Remote • Full-time • $130,000 - $175,000</p>
                          <div class="application-btn card-actions justify-start">
@@ -135,7 +160,10 @@ Part-time
                     </div>
                     <div class="card card-border bg-base-100">
                         <div class="card-body">
-                            <h2 class="heading card-title text-[#002c5cFF] font-bold">Innovation Labs</h2>
+                            <div class="flex justify-between">
+                                 <h2 class="heading card-title text-[#002c5cFF] font-bold">Innovation Labs</h2>
+                                 <i class="fa-regular fa-trash-can"></i>
+                            </div>
                             <p class="sub-heading text-gray-500 font-normal text-base">UI/UX Engineer</p>
                             <p class="price text-gray-500 font-normal text-sm"> Remote • Full-time • $130,000 - $175,000</p>
                          <div class="application-btn card-actions justify-start">
@@ -150,7 +178,10 @@ Part-time
                     </div>
                     <div class="card card-border bg-base-100">
                         <div class="card-body">
-                            <h2 class="heading card-title text-[#002c5cFF] font-bold">MegaCorp Solutions</h2>
+                            <div class="flex justify-between">
+                                <h2 class="heading card-title text-[#002c5cFF] font-bold">MegaCorp Solutions</h2>
+                                <i class="fa-regular fa-trash-can"></i>
+                            </div>
                             <p class="sub-heading text-gray-500 font-normal text-base">JavaScript Developer</p>
                             <p class="price text-gray-500 font-normal text-sm"> Remote • Full-time • $130,000 - $175,000</p>
                          <div class="application-btn card-actions justify-start">
@@ -165,7 +196,10 @@ Part-time
                     </div>
                     <div class="card card-border bg-base-100">
                         <div class="card-body">
-                            <h2 class="heading card-title text-[#002c5cFF] font-bold">StartupXYZ</h2>
+                            <div class="flex justify-between">
+                                 <h2 class="heading card-title text-[#002c5cFF] font-bold">StartupXYZ</h2>
+                                 <i class="fa-regular fa-trash-can"></i>
+                            </div>
                             <p class="sub-heading text-gray-500 font-normal text-base">Full Stack Engineer</p>
                             <p class="price text-gray-500 font-normal text-sm"> Remote • Full-time • $130,000 - $175,000</p>
                          <div class="application-btn card-actions justify-start">
@@ -180,7 +214,10 @@ Part-time
                     </div>
                     <div class="card card-border bg-base-100">
                         <div class="card-body">
-                            <h2 class="heading card-title text-[#002c5cFF] font-bold">Mobile First Corp</h2>
+                            <div class="flex justify-between">
+                                <h2 class="heading card-title text-[#002c5cFF] font-bold">Mobile First Corp</h2>
+                                <i class="fa-regular fa-trash-can"></i>
+                            </div>
                             <p class="sub-heading text-gray-500 font-normal text-base">React Native Developer</p>
                             <p class=" price text-gray-500 font-normal text-sm"> Remote • Full-time • $130,000 - $175,000</p>
                          <div class="application-btn card-actions justify-start">
