added delted functionality

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <button onclick="toggleBtn('rejected-filter-btn')" class="btn" id="rejected-filter-btn">Rejected</button>
                 </div>
             </section>
-            <section id="filtered-section" class="hidden">
+            <section id="filtered-section" class="filterd-section hidden">
 
             </section>
             <section id="no-jobs" class="hidden">
